chore: Google Sign In Implemented

--- a/.env
+++ b/.env
@@ -7,4 +7,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = "next-js-firebase-template.appspot.com"
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = "429151390127"
 NEXT_PUBLIC_FIREBASE_APP_ID = "1:429151390127:web:eee38dfaca8d34d095075a"
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID = "G-CJPZF3FPR1"
+FIREBASE_ADMIN_SERVICE_ACCOUNT = "./service_account.json"
 
