--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET = REPLACE [storageBucket]
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID = REPLACE [messagingSenderId]
 NEXT_PUBLIC_FIREBASE_APP_ID = REPLACE [appId]
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID = REPLACE [measurementId]
+FIREBASE_ADMIN_SERVICE_ACCOUNT = REPLACE: path of service account
 
