--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "embla-carousel-react": "^8.1.7",
     "firebase": "^10.12.4",
     "firebase-admin": "^12.2.0",
+    "formik": "^2.4.6",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.412.0",
     "next": "14.2.5",
